<resources>
    <string name="app_name">Calculator - TD1</string>

    <!-- Main activity -->
    <string name="compute">Compute</string>
    <string name="previous">Previous</string>

    <!-- Compute activity -->
    <string name="add_symbol" translatable="false">+</string>
    <string name="remove_symbol" translatable="false">-</string>
    <string name="multiply_symbol" translatable="false">*</string>
    <string name="divide_symbol" translatable="false">/</string>
    <string name="one" translatable="false">1</string>
    <string name="two" translatable="false">2</string>
    <string name="three" translatable="false">3</string>
    <string name="four" translatable="false">4</string>
    <string name="five" translatable="false">5</string>
    <string name="six" translatable="false">6</string>
    <string name="seven" translatable="false">7</string>
    <string name="height" translatable="false">8</string>
    <string name="nine" translatable="false">9</string>
    <string name="zero" translatable="false">0</string>
                                                     <!--first operator second-->
    <string name="operation_template" translatable="false">%1$s %2$s %3$s</string>


    <!-- Result activity -->
    <string name="operation_count_label">operation count : XX</string>
    <string name="last_result_label">last result %1$f</string>
    <string name="divide_by_zero_error">impossible to divide by zero</string>
    <string name="operator_error">Operator invalid</string>
    <string name="result_error">Numbers in the operation invalid</string>

    <!-- submit menu -->
    <string name="reset_menu_label">Reset</string>
    <string name="compute_menu_label">Compute</string>
</resources>