<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ResultActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="162dp"
        tools:layout_editor_absoluteY="16dp">

        <TextView
            android:id="@+id/operation_count_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/operation_count_label" />

        <TextView
            android:id="@+id/result_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/last_result_label" />

        <TextView
            android:id="@+id/divideError"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/divide_by_zero_error"
            android:visibility="gone" />

        <TextView
            android:id="@+id/operatorError"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/operator_error"
            android:visibility="gone" />

        <TextView
            android:id="@+id/resultError"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/result_error"
            android:visibility="gone" />

        <Button
            android:id="@+id/previous_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/previous" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>